# etcd-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.cargo/: config.toml
proto/: election.proto  lock.proto  raft_transport.proto
src/: alarm.rs  auth.rs  block_deque.rs  compactor.rs  config.rs  election.rs  kv_service.rs  lease_service.rs  lib.rs  lock.rs  main.rs  maintenance_service.rs  membership.rs  metrics.rs  raft.rs  snap.rs  store.rs  wal.rs  watch_service.rs
src/lease/: lease.rs  lessor.rs  mod.rs
src/pkg/: fileutil.rs  id.rs  mod.rs  netutil.rs  pbutil.rs  schedule.rs  wait.rs
src/rpc/: error.rs  mod.rs
stress-client/: Cargo.toml  build.rs
stress-client/src/: main.rs
tests/: kv_service_test.rs  raft_test.rs  store_test.rs  watch_service_test.rs  watch_test.rs
tests/porcupine-test/: go.mod  main.go
