[workspace]
members = ["stress-client", "."]
default-members = ["stress-client", "."]

[package]
name = "mem_etcd"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-stream = { version = "0.1" }
tonic = { version = "0.12.3", features = ["transport", "gzip", "zstd"] }
prost = "0.13.4"
prost-types = "0.13.4"
dashmap = "6.1"
parking_lot = "0.12.3"
log = "0.4"
env_logger = "0.10"
tonic-mock = { path = "extern/tonic-mock" }
prometheus = "0.13"
once_cell = "1.20"
axum = "0.8"
socket2 = "0.5"
tokio-metrics-collector = { version = "0.3", features = ["rt"] }
bytes = "1"
pin-project-lite = "0.2"
tower-http = { version = "0.6", features = ["metrics"] }
async-stream = "0.3"
libc = "0.2"
clap = { version = "4.5", features = ["derive", "env"] }
crossbeam = "0.8"

[build-dependencies]
tonic-build = "0.12.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = true
